responsive header / teleport service

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -80,3 +80,6 @@ section,
 
 // Modules
 // @import "modules/my-module";
+@import "modules/header";
+@import "modules/blocks";
+@import "modules/burger";
