--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,10 +1,7 @@
-// Font
 $mainFont: "Rubik", sans-serif;
 
-// Size
 $mainFontColor: #101010;
 $mainFontSize: 18px;
-// $mainFontWeight : 400;
 $mainFontWeight: 400;
 $mainLineHeight: 1.4;
 
@@ -14,23 +11,12 @@ $tableWidth: 768px;
 $phoneWidth: 480px;
 $smPhoneWidth: 320px;
 
-// Main color
-$default-color: #ffffff;
-$primary-color: #444ce0;
-$success-color: #26de81;
-$danger-color: #fc5c65;
-$warning-color: #fed330;
-$light-color: #999999;
-$purple-color: #8854d0;
-
-// Neutral Color
 $neutral-primary: #303133;
-$neutral-regular: #606266;
+$neutral-regular: #231f20;
 $neutral-secondary: #909399;
 $neutral-placeholder: #c0c4cc;
 
-// Border Color
-$border-base: #dcdfe6;
-$border-light: #e4e7ed;
-$border-lighter: #ebeef5;
-$border-lightex: #f2f6fc;
+$backgroundColor: #ffffff;
+$shadowColor: #00000033;
+$borderColor: #e6e6e6;
+$boldColor: #4a4a4a;
