--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -20,3 +20,5 @@ $backgroundColor: #ffffff;
 $shadowColor: #00000033;
 $borderColor: #e6e6e6;
 $boldColor: #4a4a4a;
+$activeColor: #4f80a8;
+$errorColor: #8f4545
