--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -55,6 +55,7 @@ section,
 }
 
 .container {
+    padding-top: 70px;
     width: 100%;
     flex: 0 0 auto;
     position: relative;
@@ -83,3 +84,6 @@ section,
 @import "modules/header";
 @import "modules/blocks";
 @import "modules/burger";
+@import "modules/loader";
+@import "modules/cities";
+
