--- a/src/assets/scss/modules/header.scss
+++ b/src/assets/scss/modules/header.scss
@@ -1,4 +1,5 @@
 .header {
+    z-index: 2;
     position: fixed;
     width: 100%;
     &__wrapper {
@@ -11,6 +12,10 @@
         box-shadow: 0 1px 2px 0 $shadowColor;
     }
 
+    &__logo {
+        display: block;
+    }
+
     &__links {
         &-item {
             padding-right: 10px;
@@ -20,10 +25,6 @@
     &__hamburger {
         display: none;
     }
-}
-
-.lol {
-    height: 10000px;
 }
 
 @media screen and (max-width: $tableWidth) {
@@ -60,7 +61,7 @@
 
         &__links-active {
             position: absolute;
-            top: 100px;
+            top: 115px;
             left: 50%;
             transform: translate(-50%);
             display: flex;
