--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -25,3 +25,38 @@
     font-weight: 700;
     font-style: normal;
 }
+
+@font-face {
+    font-family: "icomoon";
+    src: url("/assets/fonts/icomoon.eot?2nstx4");
+    src: url("/assets/fonts/icomoon.eot?2nstx4#iefix") format("embedded-opentype"),
+        url("/assets/fonts/icomoon.ttf?2nstx4") format("truetype"),
+        url("/assets/fonts/icomoon.woff?2nstx4") format("woff"),
+        url("/assets/fonts/icomoon.svg?2nstx4#icomoon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: "icomoon" !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-search:before {
+    content: "\e986";
+}
+.icon-github:before {
+    content: "\eab0";
+}
