--- a/src/assets/scss/modules/header.scss
+++ b/src/assets/scss/modules/header.scss
@@ -34,6 +34,7 @@
         }
 
         &__search {
+            z-index: 2;
             transition: 0.6s all;
             position: absolute;
             top: -100px;
@@ -49,6 +50,7 @@
         }
 
         &__links {
+            z-index: 1;
             transition: 0.6s all;
             position: absolute;
             top: -75px;
