--- a/src/assets/scss/modules/blocks.scss
+++ b/src/assets/scss/modules/blocks.scss
@@ -30,7 +30,9 @@
     transform: translate(-50%);
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
     &-error {
         color: $errorColor;
         font-size: rem(32);
