--- a/src/assets/scss/modules/search.scss
+++ b/src/assets/scss/modules/search.scss
@@ -22,6 +22,7 @@
         display: flex;
         flex-direction: column;
         &-item {
+            z-index: 2;
             width: 100%;
             border: 1px solid $borderColor;
             background: $backgroundColor;
