--- a/src/assets/scss/modules/blocks.scss
+++ b/src/assets/scss/modules/blocks.scss
@@ -18,7 +18,8 @@
         width: 100%;
     }
 
-    &:focus, :active {
+    &:focus,
+    :active {
         outline-color: $activeColor;
     }
 }
@@ -32,7 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
     &-error {
         color: $errorColor;
         font-size: rem(32);
