--- a/src/assets/scss/modules/header.scss
+++ b/src/assets/scss/modules/header.scss
@@ -12,11 +12,18 @@
         box-shadow: 0 1px 2px 0 $shadowColor;
     }
 
+    &__search {
+        width: 33%;
+    }
+
     &__logo {
         display: block;
     }
 
     &__links {
+        width: 33%;
+        display: flex;
+        justify-content: flex-end;
         &-item {
             padding-right: 10px;
         }
@@ -39,6 +46,7 @@
             position: absolute;
             top: -100px;
             left: 50%;
+            width: 100%;
             transform: translate(-50%);
         }
 
