--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -21,4 +21,5 @@ $shadowColor: #00000033;
 $borderColor: #e6e6e6;
 $boldColor: #4a4a4a;
 $activeColor: #4f80a8;
-$errorColor: #8f4545
+$errorColor: #8f4545;
+$successColor: #458f49;
