--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -29,7 +29,8 @@
 @font-face {
     font-family: "icomoon";
     src: url("/assets/fonts/icomoon.eot?2nstx4");
-    src: url("/assets/fonts/icomoon.eot?2nstx4#iefix") format("embedded-opentype"),
+    src: url("/assets/fonts/icomoon.eot?2nstx4#iefix")
+            format("embedded-opentype"),
         url("/assets/fonts/icomoon.ttf?2nstx4") format("truetype"),
         url("/assets/fonts/icomoon.woff?2nstx4") format("woff"),
         url("/assets/fonts/icomoon.svg?2nstx4#icomoon") format("svg");
